--- a/6HandsSwift/Base.lproj/Main.storyboard
+++ b/6HandsSwift/Base.lproj/Main.storyboard
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QhQ-jg-X3T">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QhQ-jg-X3T">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--Welcome View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="WelcomeViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeViewController" customModule="_HandsSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -38,7 +37,7 @@
                                     <rect key="frame" x="299" y="365" width="203" height="56"/>
                                 </variation>
                                 <connections>
-                                    <action selector="rentRoomAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CCw-ik-b5J"/>
+                                    <action selector="rentRoomAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bFt-ux-JL2"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zcz-I0-Sfp">
@@ -52,7 +51,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="findRoomAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6bm-A2-om3"/>
+                                    <action selector="findRoomAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3gq-zd-jPy"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Снимайте квартиры  у друзей" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVB-Pj-KTF">
@@ -111,8 +110,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="DI7-2P-eZI"/>
                     <connections>
-                        <outlet property="findRoomButton" destination="zcz-I0-Sfp" id="cas-Tl-h9L"/>
-                        <outlet property="rentRoomButton" destination="cTo-52-h07" id="4Nd-m6-bqh"/>
+                        <outlet property="findRoomButton" destination="zcz-I0-Sfp" id="fYL-SM-RcH"/>
+                        <outlet property="rentRoomButton" destination="cTo-52-h07" id="HbP-Oi-yMN"/>
                         <segue destination="clw-v9-lO6" kind="presentation" identifier="FindRoom" modalPresentationStyle="pageSheet" modalTransitionStyle="coverVertical" id="foF-vG-QVs"/>
                     </connections>
                 </viewController>
