--- a/6HandsSwift/Base.lproj/Main.storyboard
+++ b/6HandsSwift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QhQ-jg-X3T">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -119,10 +119,10 @@
             </objects>
             <point key="canvasLocation" x="1053.75" y="417.75"/>
         </scene>
-        <!--Main Lists View Controller-->
+        <!--Main Tables View Controller-->
         <scene sceneID="IFr-dZ-Lke">
             <objects>
-                <viewController id="Nkc-gL-Tv5" customClass="MainListsViewController" sceneMemberID="viewController">
+                <viewController id="Nkc-gL-Tv5" customClass="MainTablesViewController" customModule="_HandsSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8qc-zc-ew0"/>
                         <viewControllerLayoutGuide type="bottom" id="Ck0-qd-0wT"/>
@@ -137,24 +137,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yx7-65-JfD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2534.25" y="417.75"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="6Al-r5-rct">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QhQ-jg-X3T" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cmA-KC-TNi">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="CeX-Y0-pME"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zKO-0A-NIo" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-190" y="407"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8AH-d2-qJW">
