--- a/6HandsSwift/Base.lproj/Main.storyboard
+++ b/6HandsSwift/Base.lproj/Main.storyboard
@@ -188,7 +188,7 @@
         <!--New Post With Photos View Controller-->
         <scene sceneID="ocI-CP-U73">
             <objects>
-                <viewController storyboardIdentifier="SimpleVC" id="Iws-XD-iQs" customClass="NewPostWithPhotosViewController" customModule="_HandsSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FirstPostVC" id="Iws-XD-iQs" customClass="NewPostWithPhotosViewController" customModule="_HandsSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="V6i-T5-DQN"/>
                         <viewControllerLayoutGuide type="bottom" id="E2n-Zm-AwS"/>
@@ -355,7 +355,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="69w-8l-BAw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4808" y="513"/>
+            <point key="canvasLocation" x="4940" y="630"/>
         </scene>
         <!--Table With New View Controller-->
         <scene sceneID="D86-Bc-akF">
@@ -401,7 +401,7 @@
         <!--MainProperties-->
         <scene sceneID="JB7-kR-h58">
             <objects>
-                <viewController title="MainProperties" id="ezT-ya-LhF" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SecondPostVC" title="MainProperties" id="ezT-ya-LhF" customClass="PostSecondViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="QT0-i6-fBq"/>
                         <viewControllerLayoutGuide type="bottom" id="N3r-Oy-SNo"/>
@@ -493,7 +493,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jR2-bH-kal">
                                 <rect key="frame" x="29" y="283" width="150" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="175" id="1q3-Az-wmt"/>
+                                    <constraint firstAttribute="width" constant="150" id="1q3-Az-wmt"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -528,12 +528,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Можно с детьми" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v82-EX-FhD">
-                                <rect key="frame" x="37" y="393" width="103" height="21"/>
-                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Можно с животными" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvl-98-7Kk">
                                 <rect key="frame" x="162" y="393" width="129" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
@@ -550,41 +544,47 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Можно с детьми" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v82-EX-FhD">
+                                <rect key="frame" x="31" y="393" width="123" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="k7X-2c-h8y" secondAttribute="centerX" id="2Xq-Cr-Z30"/>
+                            <constraint firstAttribute="centerX" secondItem="k7X-2c-h8y" secondAttribute="centerX" constant="1" id="2Xq-Cr-Z30"/>
                             <constraint firstItem="Prc-7a-Sxi" firstAttribute="top" secondItem="5lQ-r8-kxZ" secondAttribute="bottom" constant="8" id="2j8-Fd-Uze"/>
                             <constraint firstItem="chV-Zf-51N" firstAttribute="top" secondItem="k7X-2c-h8y" secondAttribute="bottom" constant="8" id="4RO-NK-Cx0"/>
-                            <constraint firstItem="k7X-2c-h8y" firstAttribute="leading" secondItem="5lQ-r8-kxZ" secondAttribute="trailing" constant="35" id="710-mt-yYl"/>
+                            <constraint firstItem="k7X-2c-h8y" firstAttribute="leading" secondItem="5lQ-r8-kxZ" secondAttribute="trailing" constant="40" id="710-mt-yYl"/>
                             <constraint firstItem="ePE-lU-y1J" firstAttribute="top" secondItem="QT0-i6-fBq" secondAttribute="bottom" constant="8" id="7Sb-uK-TEJ"/>
-                            <constraint firstItem="3i6-VI-agV" firstAttribute="leading" secondItem="026-cE-sqR" secondAttribute="leadingMargin" constant="131" id="7wN-h6-BZk"/>
+                            <constraint firstItem="3i6-VI-agV" firstAttribute="leading" secondItem="026-cE-sqR" secondAttribute="leadingMargin" constant="127" id="7wN-h6-BZk"/>
                             <constraint firstItem="gbg-xI-vVh" firstAttribute="width" secondItem="dn2-ea-hgy" secondAttribute="width" id="8qG-of-0wr"/>
-                            <constraint firstItem="k7X-2c-h8y" firstAttribute="width" secondItem="MSt-GO-aMD" secondAttribute="width" id="DhJ-lm-oDU"/>
+                            <constraint firstItem="k7X-2c-h8y" firstAttribute="width" secondItem="MSt-GO-aMD" secondAttribute="width" constant="-4" id="DhJ-lm-oDU"/>
                             <constraint firstItem="3dD-pF-bcN" firstAttribute="trailing" secondItem="dn2-ea-hgy" secondAttribute="trailing" id="Gsj-6J-j3r"/>
-                            <constraint firstItem="avg-gw-PON" firstAttribute="leading" secondItem="026-cE-sqR" secondAttribute="leadingMargin" constant="12" id="H7z-p5-qqt"/>
-                            <constraint firstItem="025-iU-Hnu" firstAttribute="centerX" secondItem="MSt-GO-aMD" secondAttribute="centerX" priority="997" id="HO9-TE-a6c"/>
-                            <constraint firstItem="chV-Zf-51N" firstAttribute="centerX" secondItem="k7X-2c-h8y" secondAttribute="centerX" priority="997" id="LjW-l2-mwR"/>
+                            <constraint firstItem="avg-gw-PON" firstAttribute="leading" secondItem="026-cE-sqR" secondAttribute="leadingMargin" constant="8" id="H7z-p5-qqt"/>
+                            <constraint firstItem="025-iU-Hnu" firstAttribute="centerX" secondItem="MSt-GO-aMD" secondAttribute="centerX" priority="997" constant="-13" id="HO9-TE-a6c"/>
+                            <constraint firstItem="chV-Zf-51N" firstAttribute="centerX" secondItem="k7X-2c-h8y" secondAttribute="centerX" priority="997" constant="-3" id="LjW-l2-mwR"/>
                             <constraint firstItem="6oc-8z-pkT" firstAttribute="trailing" secondItem="dn2-ea-hgy" secondAttribute="trailing" id="MSK-ko-8xp"/>
                             <constraint firstItem="txn-p7-9uk" firstAttribute="top" secondItem="avg-gw-PON" secondAttribute="bottom" constant="25" id="Mec-oB-Jqh"/>
                             <constraint firstItem="025-iU-Hnu" firstAttribute="trailing" secondItem="6oc-8z-pkT" secondAttribute="trailing" id="Mjh-AX-ynt"/>
-                            <constraint firstItem="AL8-vx-4gb" firstAttribute="leading" secondItem="6oc-8z-pkT" secondAttribute="leading" constant="10" id="O1O-Qh-qPM"/>
+                            <constraint firstItem="AL8-vx-4gb" firstAttribute="leading" secondItem="6oc-8z-pkT" secondAttribute="leading" id="O1O-Qh-qPM"/>
                             <constraint firstItem="025-iU-Hnu" firstAttribute="top" secondItem="MSt-GO-aMD" secondAttribute="bottom" priority="998" constant="8" id="PPY-Yy-ulB"/>
                             <constraint firstAttribute="trailing" secondItem="MSt-GO-aMD" secondAttribute="trailing" constant="15" id="RoK-ok-62R"/>
-                            <constraint firstItem="3i6-VI-agV" firstAttribute="top" secondItem="ePE-lU-y1J" secondAttribute="bottom" constant="15" id="VcA-6Q-UHI"/>
-                            <constraint firstItem="jR2-bH-kal" firstAttribute="leading" secondItem="026-cE-sqR" secondAttribute="leadingMargin" constant="13" id="boA-Xq-HRL"/>
+                            <constraint firstItem="3i6-VI-agV" firstAttribute="top" secondItem="ePE-lU-y1J" secondAttribute="bottom" constant="4" id="VcA-6Q-UHI"/>
+                            <constraint firstItem="jR2-bH-kal" firstAttribute="leading" secondItem="026-cE-sqR" secondAttribute="leadingMargin" constant="9" id="boA-Xq-HRL"/>
                             <constraint firstItem="Wem-n4-1s6" firstAttribute="leading" secondItem="3dD-pF-bcN" secondAttribute="leading" id="dcE-6E-5Ff"/>
-                            <constraint firstItem="Prc-7a-Sxi" firstAttribute="leading" secondItem="jR2-bH-kal" secondAttribute="leading" id="fad-yk-4ro"/>
+                            <constraint firstItem="Prc-7a-Sxi" firstAttribute="leading" secondItem="jR2-bH-kal" secondAttribute="leading" constant="-1" id="fad-yk-4ro"/>
                             <constraint firstAttribute="centerX" secondItem="ePE-lU-y1J" secondAttribute="centerX" id="jGW-gu-6yb"/>
-                            <constraint firstItem="Prc-7a-Sxi" firstAttribute="centerX" secondItem="5lQ-r8-kxZ" secondAttribute="centerX" priority="997" id="n9I-0A-mGj"/>
+                            <constraint firstItem="Prc-7a-Sxi" firstAttribute="centerX" secondItem="5lQ-r8-kxZ" secondAttribute="centerX" priority="997" constant="3" id="n9I-0A-mGj"/>
                             <constraint firstItem="gbg-xI-vVh" firstAttribute="leading" secondItem="wdw-Ws-lwZ" secondAttribute="leading" constant="1" id="nhN-O1-36k"/>
-                            <constraint firstItem="eaP-Eh-thk" firstAttribute="leading" secondItem="v82-EX-FhD" secondAttribute="leading" constant="-4" id="qPB-d2-tTd"/>
-                            <constraint firstItem="txn-p7-9uk" firstAttribute="leading" secondItem="026-cE-sqR" secondAttribute="leadingMargin" constant="12" id="szh-ev-W1v"/>
-                            <constraint firstItem="avg-gw-PON" firstAttribute="top" secondItem="ePE-lU-y1J" secondAttribute="bottom" constant="19" id="uzn-rX-FYP"/>
+                            <constraint firstItem="eaP-Eh-thk" firstAttribute="leading" secondItem="v82-EX-FhD" secondAttribute="leading" constant="2" id="qPB-d2-tTd"/>
+                            <constraint firstItem="txn-p7-9uk" firstAttribute="leading" secondItem="026-cE-sqR" secondAttribute="leadingMargin" constant="8" id="szh-ev-W1v"/>
+                            <constraint firstItem="avg-gw-PON" firstAttribute="top" secondItem="ePE-lU-y1J" secondAttribute="bottom" constant="8" id="uzn-rX-FYP"/>
                             <constraint firstItem="jR2-bH-kal" firstAttribute="leading" secondItem="wdw-Ws-lwZ" secondAttribute="leading" constant="1" id="vI2-IH-80j"/>
                             <constraint firstItem="3dD-pF-bcN" firstAttribute="leading" secondItem="wdw-Ws-lwZ" secondAttribute="trailing" constant="37" id="vo4-4I-Ku5"/>
-                            <constraint firstItem="MSt-GO-aMD" firstAttribute="width" secondItem="5lQ-r8-kxZ" secondAttribute="width" priority="999" id="wV9-b6-Pzy"/>
-                            <constraint firstItem="MSt-GO-aMD" firstAttribute="leading" secondItem="k7X-2c-h8y" secondAttribute="trailing" priority="999" constant="35" id="zBD-We-tep"/>
+                            <constraint firstItem="MSt-GO-aMD" firstAttribute="width" secondItem="5lQ-r8-kxZ" secondAttribute="width" priority="999" constant="16" id="wV9-b6-Pzy"/>
+                            <constraint firstItem="MSt-GO-aMD" firstAttribute="leading" secondItem="k7X-2c-h8y" secondAttribute="trailing" priority="999" constant="40" id="zBD-We-tep"/>
                         </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -1134,7 +1134,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Yh-aw-wwH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4106" y="572"/>
+            <point key="canvasLocation" x="4038" y="557"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="W1C-i4-55v">
@@ -1208,6 +1208,6 @@
         <image name="welcomeBackground.png" width="252" height="378"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JAj-YE-RCB"/>
+        <segue reference="Uam-Mp-znH"/>
     </inferredMetricsTieBreakers>
 </document>
