--- a/6HandsSwift/Base.lproj/Main.storyboard
+++ b/6HandsSwift/Base.lproj/Main.storyboard
@@ -164,6 +164,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="nextButtonAction:" destination="JhB-7x-kJu" eventType="touchUpInside" id="Ny9-Lx-ovE"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -401,7 +404,7 @@
         <!--MainProperties-->
         <scene sceneID="JB7-kR-h58">
             <objects>
-                <viewController storyboardIdentifier="SecondPostVC" title="MainProperties" id="ezT-ya-LhF" customClass="PostSecondViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SecondPostVC" title="MainProperties" id="ezT-ya-LhF" customClass="PostSecondViewController" customModule="_HandsSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="QT0-i6-fBq"/>
                         <viewControllerLayoutGuide type="bottom" id="N3r-Oy-SNo"/>
